--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="header">
-        <h1>MyLogo</h1>
+        <h1>RujiRum</h1>
         <ul class="nav">
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
